#10 dodan prikaz zadatka

--- a/IzvorniKod/src/pages/problems/problems-table.css
+++ b/IzvorniKod/src/pages/problems/problems-table.css
@@ -1,3 +1,16 @@
 .problmes-table {
     margin-bottom: 700px;
+
 }
+
+.problems-table {    
+    counter-reset: rowNumber;
+    }
+    table tr {
+     counter-increment: rowNumber;
+    }
+    table tr td:first-child::before {    
+    content: counter(rowNumber);   
+    min-width: 1em;   
+    margin-right: 0.5em;
+    }
