--- a/IzvorniKod/src/pages/problems/problems-table.css
+++ b/IzvorniKod/src/pages/problems/problems-table.css
@@ -3,14 +3,16 @@
 
 }
 
-.problems-table {    
+.problems-table {
     counter-reset: rowNumber;
-    }
-    table tr {
-     counter-increment: rowNumber;
-    }
-    table tr td:first-child::before {    
-    content: counter(rowNumber);   
-    min-width: 1em;   
+}
+
+.problmes-table tr {
+    counter-increment: rowNumber;
+}
+
+.problmes-table tr td:first-child::before {
+    content: counter(rowNumber);
+    min-width: 1em;
     margin-right: 0.5em;
-    }
+}
